--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,9 @@
         <nav>
             <h2><a href="index.html">Daryl</a></h2>
             <ul>
-                <li><a href="Index.html">HOME</a></li>
-                <li><a href="About.html">ABOUT</a></li>
-                <li><a href="Contact.html">CONTACT</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
